# c12hz_bevy_metroidvania

./: Cargo.toml
assets/player/: animations.assets.ron  audio.assets.ron  player.assets.ron
src/: main.rs
src/core/: fps_plugin.rs  resources.rs  setup.rs  states.rs
src/core_game/: animation.rs  collision.rs  loading.rs  mod.rs
src/core_game/creature/: animate_creature.rs  apply_creature_state.rs  creature_casts.rs  creature_get_damage.rs  creature_movement.rs  creature_structs.rs  creature_switch_animation.rs  creature_time_divisions.rs  mod.rs  periodic_spawn.rs  set_creature_state.rs  setup_creature.rs  transfer_data_creature.rs
src/core_game/player/: animate.rs  apply_player_state.rs  audio_test.rs  input.rs  mod.rs  move_camera.rs  movement_and_collisions.rs  player_casts.rs  player_deal_damage.rs  player_structs.rs  set_animation_state.rs  set_attack_state.rs  set_move_state.rs  setup_camera.rs  setup_player.rs  state.rs  switch_animation.rs  time_divisions.rs  transfer_data.rs
src/core_game/world/: mod.rs
