[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_common_assets = {version = "0.4", features = ["yaml"]}
iyes_loopless = "0.9.1"
bevy_rapier2d = "0.19.0"
bevy_ecs_ldtk = "0.5.0"
rand = "0.8.5"
bevy-inspector-egui = "0.14"
benimator = "4.1.2"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
