[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs_ldtk = { version = "0.7.0", features = ["atlas"] }
bevy = "0.10"
# bevy_common_assets = { version = "0.6", features = ["yaml"] }
# bevy_asset_loader = "0.16.0"
bevy_asset_loader = { version = "0.16", features = [
  "2d",
  "standard_dynamic_assets",
] }
bevy_rapier2d = "0.21.0"
# bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk" }
rand = "0.8.5"
bevy-inspector-egui = "0.18"
benimator = "4.1.2"
seldom_state = { version = "0.6.1", features = ["leafwing_input"] }
leafwing-input-manager = "0.9.2"

# [patch.crates-io]
# bevy_ecs_tilemap = { version = "0.9", git = "https://github.com/geieredgar/bevy_ecs_tilemap", branch = "bevy_track" }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
